# sandbox

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: build-images.yml
examples/: benchmark_daytona_tensorlake.py  claude_code_local.py  claude_code_outside.py  claude_code_persona.py  find_cheapest.py  github_stats.py  load_test_filesystem.py  move_files_into_sandbox.py  sandbox_pricing.py  sandbox_repo.py  talk-like-a-pirate.md  talk_like_a_pirate.py  update_pricing.py
images/claude-code/: Dockerfile
images/claude-code-codex/: Dockerfile
images/claude-sdk/: Dockerfile
images/codex/: Dockerfile
images/cpp/: Dockerfile
images/dataeng/: Dockerfile
images/dotnet/: Dockerfile
images/fastapi/: Dockerfile
images/go/: Dockerfile
images/huggingface/: Dockerfile
images/image/: Dockerfile
images/java/: Dockerfile
images/llm/: Dockerfile
images/nlp/: Dockerfile
images/node/: Dockerfile
images/pdf/: Dockerfile
images/php/: Dockerfile
images/playwright/: Dockerfile
images/python-data-science/: Dockerfile
images/python-ml/: Dockerfile
images/pytorch/: Dockerfile
images/r/: Dockerfile
images/ruby/: Dockerfile
images/rust/: Dockerfile
images/scientific/: Dockerfile
images/scraping/: Dockerfile
images/selenium/: Dockerfile
images/tensorflow/: Dockerfile
images/web-dev/: Dockerfile
reports/: filesystem_benchmark_2026-03-27.json
scripts/: generate_filesystem_benchmark_report.py
src/bespokelabs/: __init__.py
src/bespokelabs/sandbox/: __init__.py  _agent_runtime.py  _transfer.py  agents.py  aio.py  exceptions.py  presets.py  pricing.json  pricing.py  protocols.py  sandbox.py  types.py  workspace.py
src/bespokelabs/sandbox/backends/: __init__.py  _prelude.py  daytona.py  docker.py  e2b.py  local.py  modal.py  ray.py  safehouse.py  tensorlake.py
src/bespokelabs_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_agent_runtime.py  test_agents.py  test_async.py  test_client_session.py  test_errors.py  test_local_ray_backends.py  test_presets.py  test_regression.py  test_return_type.py  test_safehouse_backend.py  test_session_state.py  test_tensorlake_backend.py  test_transfer.py  test_workspace.py
